--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,24 @@
 *{
     font-size: 16px;
 }
+
+body{
+    font-family: "Poppins", sans-serif;
+}
+
+.app{
+    background-color: darkslategray;
+}
+
+.div-home{
+    min-height: 70vh;
+    background-color: darkcyan;
+    margin: 10px 10%;
+    border: 2px solid red;
+    border-radius: 10px;
+}
+
+.planet-img{
+    width: 700px;
+    height: auto;
+}
