--- a/src/components/arctic/Arctic.css
+++ b/src/components/arctic/Arctic.css
@@ -6,8 +6,17 @@
 .arctic-chart{
     min-height: 300px;
     background-color: lightcyan;
-    margin: 10px 10%;
-    border: 2px solid red;
+    margin: 5px 10%;
+    border: 2px solid purple;
     box-shadow: 10px 10px 10px;
     border-radius: 10px;
+}
+
+.description-arctic{
+    background-color: lightcyan;
+    color: purple;
+    margin: 5px 10%;
+    border: 5px solid purple;
+    border-radius: 10px;
+    padding: 15px;
 }
