--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,15 +1,24 @@
 .list{
     list-style-type: none;
+    /* padding: 5px; */
 }
 
-.item-list{
-    margin: 0 30px;
-    font-size: 22px;
+.item-list a{
+    /* margin: 0 30px; */
+    font-size: 18px;
     text-transform: uppercase;
 }
+.item-list:hover{
+    text-decoration: 5px underline darkcyan;
+    transform: scale(1.1);
+}
 
-.icons-list{
+/* .icons-list{
     margin:  0 20px;
+} */
+.icons-list:hover{
+    transform: scale(1.3);
+    color: darkcyan;
 }
 
 .navbar{
@@ -18,4 +27,18 @@
     border: 2px solid red;
     border-radius: 10px;
     box-shadow: 10px 10px 10px;
+}
+
+.react-icon{
+    font-size: 2rem;
+}
+
+@media screen and (max-width: 922px){
+    .react-icon{
+        font-size: 1.5rem;
+    }
+
+    .item-list a{
+        font-size: 16px;
+    }
 }
