--- a/src/components/nitrous/Nitrous.css
+++ b/src/components/nitrous/Nitrous.css
@@ -7,7 +7,15 @@
     min-height: 300px;
     background-color: lightskyblue;
     margin:  10px 10%;
-    border: 2px solid red;
+    border: 2px solid orange;
     box-shadow: 10px 10px 10px;
     border-radius: 10px;
+}
+
+.description-nitrous{
+    background-color: lightskyblue;
+    margin: 5px 10%;
+    border: 5px solid orange;
+    border-radius: 10px;
+    padding: 15px;
 }
