--- a/src/components/temperature/Temperature.css
+++ b/src/components/temperature/Temperature.css
@@ -6,8 +6,16 @@
 .temperature-chart{
     min-height: 300px;
     background: khaki;
-    margin: 10px 10%;
-    border: 2px solid red;
+    margin: 5px 10%;
+    border: 2px solid darkred;
     box-shadow: 10px 10px 10px;
     border-radius: 10px;
+}
+
+.description-temperature{
+    background-color: khaki;
+    margin: 5px 10%;
+    border: 5px solid darkred;
+    border-radius: 10px;
+    padding: 15px;
 }
