--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,23 @@ body{
 }
 
 .div-home{
-    min-height: 70vh;
+    min-height: 60vh;
     background-color: darkcyan;
     margin: 10px 10%;
-    border: 2px solid red;
+    border: 5px solid white;
     border-radius: 10px;
 }
 
 .planet-img{
     width: 700px;
     height: auto;
+}
+
+.advice{
+    margin: 5px 10%;
+    border: 2px solid darkred;
+    border-radius: 10px;
+    padding: 15px;
+    background-color: white;
+    color: darkred;
 }
