--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,10 +1,8 @@
 .list{
     list-style-type: none;
-    /* padding: 5px; */
 }
 
 .item-list a{
-    /* margin: 0 30px; */
     font-size: 18px;
     text-transform: uppercase;
 }
@@ -12,10 +10,6 @@
     text-decoration: 5px underline darkcyan;
     transform: scale(1.1);
 }
-
-/* .icons-list{
-    margin:  0 20px;
-} */
 .icons-list:hover{
     transform: scale(1.3);
     color: darkcyan;
@@ -24,7 +18,7 @@
 .navbar{
     background-color: white;
     margin: 10px 10%;
-    border: 2px solid red;
+    border: 2px solid white;
     border-radius: 10px;
     box-shadow: 10px 10px 10px;
 }
